Corrigiendo el nombre a  index.html

--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
                         <path d="M18 6L6 18M6 6l12 12" stroke="white" stroke-width="2" stroke-linecap="round"/>
                     </svg>
                 <ul>
-                    <li><a href="Index.html" class="chat-title">Chat<span class="ia-color1">IA</span>r</a></li>
+                    <li><a href="index.html" class="chat-title">Chat<span class="ia-color1">IA</span>r</a></li>
                     <li><a href="GuIAr.html">GuIAr</a></li>
                     <li><a href="Anunciar.html">Anunciar</a></li>
                     <li><a href="Conoce.html">Conoce más</a></li>
